Cleanup project file

--- a/WebApp1/appsettings.example.json
+++ b/WebApp1/appsettings.example.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=Test;User Id=demo;Password=;"
+    "DefaultConnection": "Server=localhost;Database=Test;User Id=demo;Password=password;"
   },
   "AllowedHosts": "*"
 }
