Update example settings

--- a/WebApp2/appsettings.example.json
+++ b/WebApp2/appsettings.example.json
@@ -6,8 +6,8 @@
     }
   },
   "CosmosDb": {
-    "DatabaseId": "YourDatabaseId",
-    "ContainerId": "YourContainerId",
+    "DatabaseId": "Note",
+    "ContainerId": "Items",
     "EndpointUri": "https://your-cosmos-db-account.documents.azure.com:443/",
     "PrimaryKey": "YourPrimaryKey"
   },
