--- a/WebApp2/WebApp2.csproj
+++ b/WebApp2/WebApp2.csproj
@@ -8,8 +8,10 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.42.0"/>
-        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
+        <PackageReference Include="AspNetCore.SwaggerUI.Themes" Version="1.0.0" />
+        <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.43.0" />
+        <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.7.3" />
     </ItemGroup>
 
 </Project>
